<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cover_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        app:cardCornerRadius="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_cover_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/ic_cover_photo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_cover_photo" />

    <TextView
        android:id="@+id/txt_account_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/account_admin_or_user"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_login" />

    <TextView
        android:id="@+id/txt_enter_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_27"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/enter_account"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_account_type" />

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_27"
        android:autofillHints="true"
        android:background="@drawable/edit_text_border"
        android:hint="@string/gmail_or_phone_number"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dp_8"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/txt_enter_account"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_account" />

    <TextView
        android:id="@+id/txt_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_27"
        android:layout_marginTop="@dimen/dp_18"
        android:text="@string/enter_password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_user_name" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:autofillHints="true"
        android:background="@drawable/edit_text_border"
        android:drawableEnd="@drawable/ic_off_eye_24"
        android:hint="@string/enter_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="@dimen/dp_8"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@id/edit_user_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/edit_user_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_password" />

    <CheckBox
        android:id="@+id/cb_remember_account"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/remember_account"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintStart_toStartOf="@id/edit_user_name"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/forgot_password"
        android:textColor="#F85252"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toBottomOf="@id/cb_remember_account"
        app:layout_constraintEnd_toEndOf="@id/edit_user_name"
        app:layout_constraintTop_toTopOf="@id/cb_remember_account" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/rounded_button"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dp_32"
        android:layout_height="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_16"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/txt_not_yet_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_22"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="#D9D9D9"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
        app:layout_constraintEnd_toStartOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/edit_user_name"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_22"
        android:background="#D9D9D9"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
        app:layout_constraintEnd_toEndOf="@id/edit_user_name"
        app:layout_constraintStart_toEndOf="@id/iv_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/txt_not_yet_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/you_do_not_have_an_account_yet"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>